<resources>
    <string name="app_name">FinalYearProject</string>
    <string name="username_hint">Username</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="home">Home</string>
    <string name="Booking">B...History</string>
    <string name="Inbox">Inbox</string>
    <string name="Profile">Profile</string>
    <string name="VoiceBooKing">Voice BooKing</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Homepage">Home Page (dashbord)</string>
    <string name="voice_booking">Voice BooKing</string>
    <string name="MyBooking">My Booking</string>
    <string name="MyProfile">My Profile</string>
    <string name="VoiceCommand">Voice Command</string>
    <string name="MyInbox">My Inbox</string>
    <string name="todo2">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mybooking_history">MyBooking history</string>
    <string name="fast_booking">Fast Booking only for One person Book a ticket singal or return</string>
    <string name="platform_ticket">Platform ticket only</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="schedule">Schedule</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="arrow">arrow</string>
</resources>