<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/navBooking"
        android:title="@string/Booking"
        android:icon="@drawable/baseline_assignment_24"/>

    <item
        android:id="@+id/navVoiceCommand"
        android:title="@string/schedule"
        android:icon="@drawable/baseline_train_24"/>

    <item
        android:id="@+id/navInBox"
        android:title="@string/Inbox"
        android:icon="@drawable/baseline_email_24"/>

    <item
        android:id="@+id/navProfile"
        android:title="@string/Profile"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>