<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".java.Register_Activity">

    <EditText
        android:textSize="20dp"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/username_hint"/>

    <EditText
        android:textSize="20dp"
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/phone_hint"/>

    <EditText
        android:textSize="20dp"
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email_hint"/>

    <EditText
        android:textSize="20dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/password_hint"/>

    <Button
        android:textSize="20dp"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"/>

    <TextView
        android:textSize="20dp"
        android:id="@+id/goToLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/login_now"
        android:textColor="@color/red"/>

</LinearLayout>
